--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="container text-center">
+            <h1>Temporizador</h1>
+            <form>
+                <label for="tiempo">Ingrese el tiempo en segundos:</label>
+                <input type="number" id="tiempo" name="tiempo">
+                <button type="button" id="iniciar" class="btn colorBoton">Iniciar</button>
+                <button type="button" id="pausar" class="btn colorBoton">Pausar</button>
+                <button type="button" id="reiniciar" class="btn colorBoton">Reiniciar</button>
+            </form>
+            <div id="contador"></div>
+        </section>
+    </main>
     <footer class="bg-dark text-light text-center p-3">
         &copy; Todos los derechos reservados
     </footer>
