--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
     </header>
     <main>
         <section class="container text-center">
-            <h1>Temporizador</h1>
+            <h1 class="mb-3 textMorado">Temporizador</h1>
             <form>
                 <label for="tiempo">Ingrese el tiempo en segundos:</label>
                 <input type="number" id="tiempo" name="tiempo">
+            </form>
+            <div class="mt-3">
                 <button type="button" id="iniciar" class="btn colorBoton">Iniciar</button>
                 <button type="button" id="pausar" class="btn colorBoton">Pausar</button>
                 <button type="button" id="reiniciar" class="btn colorBoton">Reiniciar</button>
-            </form>
-            <div id="contador"></div>
+            </div>
+            <div id="contador" class="mt-5 fs-1 textMorado"></div>
         </section>
     </main>
     <footer class="bg-dark text-light text-center p-3">
